<resources>


    <string name="app_name">breathlyJava</string>
    <string name="nav_home">Home</string>
    <string name="nav_sleep">Sleep</string>
    <string name="nav_meditation">Meditation</string>
    <string name="nav_relax">Relax</string>
    <string name="nav_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
